# X1337

./: .gitignore  Background.cpp  Background.h  Bullet.cpp  Bullet.h  BulletFactory.cpp  BulletFactory.h  Button.cpp  Button.h  CMakeLists.txt  DAT220.APS  DAT220.psess  DAT220.rc  DAT220.sln  DAT220.vcxproj  DAT220.vcxproj.filters  DAT220131128.vspx  Doxyfile  Enemy.cpp  Enemy.h  Factory.h  GameEngine.cpp  GameEngine.h  GameGlobals.h  GameShape.cpp  GameShape.h  Globals.cpp  Globals.h  InputController.cpp  InputController.h  Log.h  Menu.cpp  Menu.h  Object.cpp  Object.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  README.MD  (+27 more)
Debug/: CL.read.1.tlog  CL.write.1.tlog  DAT220.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Deprecate/: Button.h  SliceEngine.h
_deprecated/: EnemyFactory.cpp  EnemyFactory.h  QuadTree.h
assets/: config.xml  configuration.json  configuration.xml  credits.json  credits.xml
assets/scripts/: drit.xml  drit1.xml  drit2.xml  drit3.xml  encounter.xml  encounter1.xml  encounterDA.xml  encounterDemo.xml  game_menu.xml  stage1.xml  stage2.xml  test.xml  test1.xml  test2.xml
assets/sprites/dev/: Temp.rar
cmake/: FindPugiXML.cmake
include/: Background.h  Bullet.h  BulletFactory.h  Constants.h  Enemy.h  GameEngine.h  GameShape.h  HighScoreItem.h  Image.h  Menu.h  Object.h  Player.h  Powerup.h  Renderer.h  ResourceHandler.h  ResourceManager.h  Scene.h  Script.h  ScriptTemplate.h  ScriptTick.h  Shooter.h  VectorN.h  World.h
libs/: rapidxml.hpp
python/examples/: state.json  test.py
src/: Background.cpp  Bullet.cpp  BulletFactory.cpp  Enemy.cpp  GameEngine.cpp  GameShape.cpp  Menu.cpp  Object.cpp  Player.cpp  Powerup.cpp  Renderer.cpp  ResourceHandler.cpp  ResourceManager.cpp  Scene.cpp  Script.cpp  ScriptTemplate.cpp  Shooter.cpp  World.cpp  main.cpp
src/pybind/: Background.cpp  Bullet.cpp  BulletFactory.cpp  Constants.cpp  Enemy.cpp  GameEngine.cpp  GameShape.cpp  Image.cpp  Menu.cpp  Object.cpp  Player.cpp  Powerup.cpp  Renderer.cpp  ResourceHandler.cpp  Scene.cpp  Script.cpp  Shooter.cpp  VectorN.cpp  World.cpp  XLeet.cpp
